AIDACC: replace Has__accept__<>() with Has___visit__<>()

Clang compiles Has__accept__<>() just fine, but g++ >= 8 is buggy and fails
to match template arguments correctly. The corresponding bug report is here:
	https://gcc.gnu.org/bugzilla/show_bug.cgi?id=87748

Signed-off-by: Tim Janik <timj@gnu.org>